deps/v8/test/message/fail/import-as-eval.out
*%(basename)s:5: SyntaxError: Unexpected eval or arguments in strict mode
import { foo as eval } from "mod";
                ^^^^
SyntaxError: Unexpected eval or arguments in strict mode
